--- a/index.html
+++ b/index.html
@@ -1,8 +1,33 @@
 <!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
-    
-  </body>
+<html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <title>Logginwolf document</title>
+        <meta name="keywords"
+            content="werewolf, Miller's Hollow, archive, party, character, game, board, application, support">
+        <meta name="description" content="Documentations website of Logginwolf's technical informations.">
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+
+    <body>
+        <div class="page">
+            <nav class="navbar">
+                <a class="navlink" href="./">Home</a>
+                <hr />
+                <a class="navlink" href="https://github.com/Logginwolf">GitHub</a>
+                <a class="navlink" href="https://x.com/rk0cc_osp">X (Twitter)</a>
+                <a class="navlink" href="https://bsky.app/profile/osp.rk0cc.xyz">Bluesky</a>
+                <hr />
+                <a class="navlink" href="https://github.com/sponsors/rk0cc">Sponsorship</a>
+            </nav>
+            <article class="context">
+                <h1 class="context-header">Logginwolf Documentation website</h1>
+                <p>Website still in construction...</p>
+            </article>
+        </div>
+        <footer class="copyright"></footer>
+        <script src="autorender.js"></script>
+    </body>
+
 </html>
