Push simplified interface

--- a/index.html
+++ b/index.html
@@ -7,27 +7,39 @@
         <meta name="keywords"
             content="werewolf, Miller's Hollow, archive, party, character, game, board, application, support">
         <meta name="description" content="Documentations website of Logginwolf's technical informations.">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/fontawesome.min.css"
+            integrity="sha512-v8QQ0YQ3H4K6Ic3PJkym91KoeNT5S3PnDKvqnwqFD1oiqIl653crGZplPdU5KKtHjO0QKcQ2aUlQZYjHczkmGw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css"
+            integrity="sha512-58P9Hy7II0YeXLv+iFiLCv1rtLW47xmiRpC1oFafeKNShp8V5bKV/ciVtYqbk2YfxXQMt58DjNfkXFOn62xE+g=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link type="text/css" rel="stylesheet" href="override.css">
+        <link type="text/css" rel="stylesheet" href="style.css">
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/fontawesome.min.js"
+            integrity="sha512-j12pXc2gXZL/JZw5Mhi6LC7lkiXL0e2h+9ZWpqhniz0DkDrO01VNlBrG3LkPBn6DgG2b8CDjzJT+lxfocsS1Vw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/brands.min.js"
+            integrity="sha512-ILOQokRQNF0S8SKV6fnaLNj02CmZnDWmYUr3zlH4jwToep0lWc7twuTzF+Mm0cKPdszi0xe8KymVi2y7mAweVQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     </head>
 
     <body>
-        <div class="page">
-            <nav class="navbar">
-                <a class="navlink" href="./">Home</a>
-                <hr />
-                <a class="navlink" href="https://github.com/Logginwolf">GitHub</a>
-                <a class="navlink" href="https://x.com/rk0cc_osp">X (Twitter)</a>
-                <a class="navlink" href="https://bsky.app/profile/osp.rk0cc.xyz">Bluesky</a>
-                <hr />
-                <a class="navlink" href="https://github.com/sponsors/rk0cc">Sponsorship</a>
-            </nav>
-            <article class="context">
-                <h1 class="context-header">Logginwolf Documentation website</h1>
-                <p>Website still in construction...</p>
-            </article>
-        </div>
-        <footer class="copyright"></footer>
-        <script src="autorender.js"></script>
+        <h1>Logginwolf documentation website</h1>
+        <nav class="navlink">
+            <a href="/">Home</a>
+            <a href="#">Manual</a>
+            <a href="#">Data format</a>
+            <a href="#">Changelogs</a>
+        </nav>
+        <footer class="copyright">
+            <a href="https://x.com/rk0cc_osp" class="snslink xtw">
+                <i class="fa-brands fa-x-twitter"></i>
+            </a>
+            <a href="https://bsky.app/profile/osp.rk0cc.xyz" class="snslink bsky">
+                <i class="fa-brands fa-bluesky"></i>
+            </a>
+            <p>&copy;&nbsp;2025&nbsp;rk0cc</p>
+        </footer>
     </body>
 
 </html>
