Link homepage with current dir's default name

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <body>
         <h1>Logginwolf technical documentation website</h1>
         <nav class="navlink">
-            <a href="index.html">Home</a>
+            <a href="./">Home</a>
             <a href="gamemode.html">Game mode</a>
             <a href="#">Roles</a>
             <a href="#">Archive</a>
