--- a/gamemode.html
+++ b/gamemode.html
@@ -20,7 +20,7 @@
     <body>
         <h1>Game mode</h1>
         <nav class="navlink">
-            <a href="index.html">Home</a>
+            <a href="./">Home</a>
             <a href="gamemode.html">Game mode</a>
             <a href="#">Roles</a>
             <a href="#">Archive</a>
