Uploads placeholder pages n samples

--- a/gamemode.html
+++ b/gamemode.html
@@ -13,7 +13,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css"
             integrity="sha512-58P9Hy7II0YeXLv+iFiLCv1rtLW47xmiRpC1oFafeKNShp8V5bKV/ciVtYqbk2YfxXQMt58DjNfkXFOn62xE+g=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="next" href="gamemode.html" />
+        <link rel="prev" href="index.html" />
+        <link rel="next" href="roles.html" />
         <link type="text/css" rel="stylesheet" href="common.css">
     </head>
 
@@ -22,11 +23,34 @@
         <nav class="navlink">
             <a href="./">Home</a>
             <a href="gamemode.html">Game mode</a>
-            <a href="#">Roles</a>
-            <a href="#">Archive</a>
-            <a href="#">Changelogs</a>
+            <a href="roles.html">Roles</a>
+            <a href="archive.html">Archive</a>
+            <a href="changelogs.html">Changelogs</a>
         </nav>
-        <article></article>
+        <article>
+            <section>
+                <p><i>The Werewolves of Miller's Hollow</i> has been released at early 2000s and it becomes peak during
+                    pandamic between March and May 2020 according to Google Trends<sup>1</sup>. It is because the game
+                    can be played without properties as well as increase usages of online conferencing software that it
+                    assists peoples to retains social interactions when going outside was forbidden. Depending on
+                    regions scope, it also reveals that East Asia has the most interests rates amongs with other
+                    geocultural<sup>1</sup>. Therefore, the derived version of <i>Werewolf</i> were invented to minimize
+                    complexity of player roles and eliminate third teams that these improvment can make the game
+                    progress becomes compact to attract peoples who have limited vacant times.</p>
+            </section>
+            <section>
+                <header><h3>Rules</h3></header>
+            </section>
+            <section>
+                <p> Remarks:
+                <ol>
+                    <li><a
+                            href="https://trends.google.com/trends/explore?date=2020-01-01%202020-12-31&q=%2Fg%2F121k35b6&hl=en-GB">Statistic</a>
+                        was captured in 1 June, 2025.</li>
+                </ol>
+                </p>
+            </section>
+        </article>
         <footer class="copyright">
             <a href="https://github.com/rk0cc" class="snslink gh">
                 <i class="fa-brands fa-github"></i>
