--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <nav class="navlink">
             <a href="./">Home</a>
             <a href="gamemode.html">Game mode</a>
-            <a href="#">Roles</a>
-            <a href="#">Archive</a>
-            <a href="#">Changelogs</a>
+            <a href="roles.html">Roles</a>
+            <a href="archive.html">Archive</a>
+            <a href="changelogs.html">Changelogs</a>
         </nav>
         <div class="banner warn">
             <p class="techdoc-remark">This website aims to provide open data standard from Logginwolf. Currently,
@@ -70,6 +70,7 @@
                 </p>
             </section>
         </article>
+        <hr />
         <article>
             <header>
                 <h3>Doubtful information concern</h3>
