Mandate JS allowed

--- a/archive.html
+++ b/archive.html
@@ -21,7 +21,7 @@
                 width: 100%;
             }
 
-            div.file-sample-field > textarea {
+            div.file-sample-field>textarea {
                 display: block;
                 width: 100%;
                 resize: none;
@@ -39,14 +39,23 @@
             <a href="archive.html">Archive</a>
             <a href="changelogs.html">Changelogs</a>
         </nav>
+        <noscript>
+            <div class="banner error">
+                <p class="techdoc-remark">This page requires Javascript features. Please enable it in the browser
+                    setting.</p>
+            </div>
+        </noscript>
         <article>
             <p><i>This page is under constructios</i></p>
             <div class="file-sample-field">
-                <h6><a href="https://github.com/Logginwolf/docs/blob/main/examples/preferences.json">preferences.json</a></h6>
+                <h6><a
+                        href="https://github.com/Logginwolf/docs/blob/main/examples/preferences.json">preferences.json</a>
+                </h6>
                 <textarea id="preferences-sample" disabled></textarea>
             </div>
             <div class="file-sample-field">
-                <h6><a href="https://github.com/Logginwolf/docs/blob/main/examples/rounds.csv?plain=1">rounds.csv</a></h6>
+                <h6><a href="https://github.com/Logginwolf/docs/blob/main/examples/rounds.csv?plain=1">rounds.csv</a>
+                </h6>
                 <textarea id="rounds-sample" disabled></textarea>
             </div>
         </article>
