--- a/gamemode.html
+++ b/gamemode.html
@@ -16,6 +16,30 @@
         <link rel="prev" href="index.html" />
         <link rel="next" href="roles.html" />
         <link type="text/css" rel="stylesheet" href="common.css">
+        <style>
+            table.rule-table {
+                width: 100%;
+                table-layout: fixed;
+            }
+
+            table.rule-table tr>td {
+                text-align: center;
+                padding: 6px;
+            }
+
+            table.rule-table tr>td.title-col {
+                font-weight: 700;
+                width: 25%;
+            }
+
+            table.rule-table tr>td.success {
+                background-color: lime;
+            }
+
+            table.rule-table tr>td.error {
+                background-color: crimson;
+            }
+        </style>
     </head>
 
     <body>
@@ -29,6 +53,9 @@
         </nav>
         <article>
             <section>
+                <header>
+                    <h3>Background</h3>
+                </header>
                 <p><i>The Werewolves of Miller's Hollow</i> has been released at early 2000s and it becomes peak during
                     pandamic between March and May 2020 according to Google Trends<sup>1</sup>. It is because the game
                     can be played without properties as well as increase usages of online conferencing software that it
@@ -39,7 +66,58 @@
                     progress becomes compact to attract peoples who have limited vacant times.</p>
             </section>
             <section>
-                <header><h3>Rules</h3></header>
+                <header>
+                    <h3>Rules</h3>
+                </header>
+                <p>For roles availability for each variants, please refer to <a href="roles.html">roles page</a>.</p>
+                <p> &lpar;The following list of rules is going to integrate Logginwolf's restriction when creating game
+                    record.&rpar; </p>
+                <table class="rule-table" border="1">
+                    <tr>
+                        <td class="title-col">Players &lpar;Excluding moderator&rpar;</td>
+                        <td colspan="3">6 - 48 peoples</td>
+                    </tr>
+                    <tr>
+                        <td class="title-col" rowspan="5">Supported players in Werewolf party<sup>2</sup></td>
+                        <td><b>Range of participants</b></td>
+                        <td><b>Minimum</b></td>
+                        <td><b>Maximum</b></td>
+                    </tr>
+                    <tr>
+                        <td>6 - 7</td>
+                        <td colspan="2">2</td>
+                    </tr>
+                    <tr>
+                        <td>8 - 11</td>
+                        <td>2</td>
+                        <td>4</td>
+                    </tr>
+                    <tr>
+                        <td>12 - 23</td>
+                        <td>4</td>
+                        <td rowspan="2">&lpar;1&sol;3 of participants, floored&rpar;</td>
+                    </tr>
+                    <tr>
+                        <td>24 - 48</td>
+                        <td>6</td>
+                    </tr>
+                </table>
+            </section>
+            <section>
+                <header>
+                    <h3>Gameplay</h3>
+                </header>
+                <p>This section is a preferred guidence for moderator that it lists the entire progress of
+                    <i>Werewolf</i> when Logginwolf is involved as well as character cards are featured, eventhough it
+                    still playable without properties.</p>
+                <h5>Initial state</h5>
+                <p>
+                <ol>
+                    <li>Verify character cards meet the requirements and records available character cards in
+                        Logginwolf.</li>
+                    <li></li>
+                </ol>
+                </p>
             </section>
             <section>
                 <p> Remarks:
@@ -47,6 +125,7 @@
                     <li><a
                             href="https://trends.google.com/trends/explore?date=2020-01-01%202020-12-31&q=%2Fg%2F121k35b6&hl=en-GB">Statistic</a>
                         was captured in 1 June, 2025.</li>
+                    <li>This restriction does not be applied if someone is playing as thief.</li>
                 </ol>
                 </p>
             </section>
