Remove vague remark

--- a/gamemode.html
+++ b/gamemode.html
@@ -78,7 +78,7 @@
                         <td colspan="3">6 - 48 peoples</td>
                     </tr>
                     <tr>
-                        <td class="title-col" rowspan="5">Supported players in Werewolf party<sup>2</sup></td>
+                        <td class="title-col" rowspan="5">Supported players in Werewolf party</td>
                         <td><b>Range of participants</b></td>
                         <td><b>Minimum</b></td>
                         <td><b>Maximum</b></td>
@@ -125,7 +125,6 @@
                     <li><a
                             href="https://trends.google.com/trends/explore?date=2020-01-01%202020-12-31&q=%2Fg%2F121k35b6&hl=en-GB">Statistic</a>
                         was captured in 1 June, 2025.</li>
-                    <li>This restriction does not be applied if someone is playing as thief.</li>
                 </ol>
                 </p>
             </section>
