Remove game mode page and merge to index

--- a/gamemode.html
+++ b/gamemode.html
@@ -17,28 +17,7 @@
         <link rel="next" href="roles.html" />
         <link type="text/css" rel="stylesheet" href="common.css">
         <style>
-            table.rule-table {
-                width: 100%;
-                table-layout: fixed;
-            }
-
-            table.rule-table tr>td {
-                text-align: center;
-                padding: 6px;
-            }
-
-            table.rule-table tr>td.title-col {
-                font-weight: 700;
-                width: 25%;
-            }
-
-            table.rule-table tr>td.success {
-                background-color: lime;
-            }
-
-            table.rule-table tr>td.error {
-                background-color: crimson;
-            }
+            
         </style>
     </head>
 
@@ -52,63 +31,15 @@
             <a href="changelogs.html">Changelogs</a>
         </nav>
         <article>
-            <section>
-                <header>
-                    <h3>Background</h3>
-                </header>
-                <p><i>The Werewolves of Miller's Hollow</i> has been released at early 2000s and it becomes peak during
-                    pandamic between March and May 2020 according to Google Trends<sup>1</sup>. It is because the game
-                    can be played without properties as well as increase usages of online conferencing software that it
-                    assists peoples to retains social interactions when going outside was forbidden. Depending on
-                    regions scope, it also reveals that East Asia has the most interests rates amongs with other
-                    geocultural<sup>1</sup>. Therefore, the derived version of <i>Werewolf</i> were invented to minimize
-                    complexity of player roles and eliminate third teams that these improvment can make the game
-                    progress becomes compact to attract peoples who have limited vacant times.</p>
-            </section>
-            <section>
-                <header>
-                    <h3>Rules</h3>
-                </header>
-                <p>For roles availability for each variants, please refer to <a href="roles.html">roles page</a>.</p>
-                <p> &lpar;The following list of rules is going to integrate Logginwolf's restriction when creating game
-                    record.&rpar; </p>
-                <table class="rule-table" border="1">
-                    <tr>
-                        <td class="title-col">Players &lpar;Excluding moderator&rpar;</td>
-                        <td colspan="3">6 - 48 peoples</td>
-                    </tr>
-                    <tr>
-                        <td class="title-col" rowspan="5">Supported players in Werewolf party</td>
-                        <td><b>Range of participants</b></td>
-                        <td><b>Minimum</b></td>
-                        <td><b>Maximum</b></td>
-                    </tr>
-                    <tr>
-                        <td>6 - 7</td>
-                        <td colspan="2">2</td>
-                    </tr>
-                    <tr>
-                        <td>8 - 11</td>
-                        <td>2</td>
-                        <td>4</td>
-                    </tr>
-                    <tr>
-                        <td>12 - 23</td>
-                        <td>4</td>
-                        <td rowspan="2">&lpar;1&sol;3 of participants, floored&rpar;</td>
-                    </tr>
-                    <tr>
-                        <td>24 - 48</td>
-                        <td>6</td>
-                    </tr>
-                </table>
-            </section>
+            
             <section>
                 <p> Remarks:
                 <ol>
                     <li><a
                             href="https://trends.google.com/trends/explore?date=2020-01-01%202020-12-31&q=%2Fg%2F121k35b6&hl=en-GB">Statistic</a>
                         was captured in 1 June, 2025.</li>
+                    <li>Third-party may not be availabled in some variants.</li>
+                    <li>Ensure the number of Werewolf cards does meet the requirement when thief is included.</li>
                 </ol>
                 </p>
             </section>
