--- a/roles.html
+++ b/roles.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css"
             integrity="sha512-58P9Hy7II0YeXLv+iFiLCv1rtLW47xmiRpC1oFafeKNShp8V5bKV/ciVtYqbk2YfxXQMt58DjNfkXFOn62xE+g=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="prev" href="gamemode.html" />
+        <link rel="prev" href="index.html" />
         <link rel="next" href="archive.html" />
         <link type="text/css" rel="stylesheet" href="common.css">
     </head>
@@ -22,7 +22,6 @@
         <h1>Player roles</h1>
         <nav class="navlink">
             <a href="./">Home</a>
-            <a href="gamemode.html">Game mode</a>
             <a href="roles.html">Roles</a>
             <a href="archive.html">Archive</a>
             <a href="changelogs.html">Changelogs</a>
