Slightly change desc

--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
                 <ul>
                     <li>
                         <p>Logginwolf is an assist program for moderator, no participants are allowed to peek and
-                            control the program during in the game progress, no matter the participants is active or not.</p>
+                            control the program during in the game progress unless some instructions requires parsing to
+                            participants for some process.</p>
                     </li>
                     <li>
                         <p>The game progress are saved into device storage automatically at the end of initial, night
