--- a/roles.html
+++ b/roles.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <title>Player roles - Logginwolf technical documentation</title>
         <meta name="keywords"
-            content="werewolf, Miller's Hollow, archive, party, character, game, board, application, support">
-        <meta name="description" content="Documentations website of Logginwolf's technical informations.">
+            content="werewolf, Miller's Hollow, archive, party, character, game, board, application, support, Townfolk, Villager, Thief, Seer, Sheriff, Witch, Hunter, Cupid, Little Girl, Elder, Scapegoat, Defender, Piper, Pyromanic, Scandalmonger">
+        <meta name="description" content="Roles explainations in Werewolf game .">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/fontawesome.min.css"
             integrity="sha512-v8QQ0YQ3H4K6Ic3PJkym91KoeNT5S3PnDKvqnwqFD1oiqIl653crGZplPdU5KKtHjO0QKcQ2aUlQZYjHczkmGw=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -26,7 +26,14 @@
             <a href="archive.html">Archive</a>
             <a href="changelogs.html">Changelogs</a>
         </nav>
-        <article></article>
+        <article>
+            <p>Every roles who mentioned in this page is based on the manual from base game, <i>New Moon</i> and <i>The
+                    Village</i> expansion packs are retrived from <a
+                    href="https://cdn.1j1ju.com/medias/5f/6f/6b-the-werewolves-of-millers-hollow-the-pact-rulebook.pdf">manual
+                    from <i>The Pact</i></a>. Considering unpopularity of the <i>Werewolf</i>'s expansion packs, roles
+                from <i>Characters</i> expansion pack are not included due to overcomplexity of rules. Moreover, only
+                unique roles form variants will be listed below and simply offers localized name.</p>
+        </article>
         <footer class="copyright">
             <a href="https://github.com/rk0cc" class="snslink gh">
                 <i class="fa-brands fa-github"></i>
